--- a/2013-05-09.RealtimeTimeseriesVisualisation/index.html
+++ b/2013-05-09.RealtimeTimeseriesVisualisation/index.html
@@ -30,7 +30,7 @@
 		<![endif]-->
 		
 		<!-- D3 streaming graph stuff -->
-		<script src="../d3/d3.js" charset="utf-8"></script>
+		<script src="../d3/d3.min.js" charset="utf-8"></script>
 		<script src="websocket.js"></script>
 		<script src="streaming_graph.js"></script>
 		<link rel="stylesheet" href="demo-black.css" />
