--- a/2013-05-09.RealtimeTimeseriesVisualisation/demo.html
+++ b/2013-05-09.RealtimeTimeseriesVisualisation/demo.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <html>
 <head>
-	<script src="../d3/d3.js" charset="utf-8"></script>
+	<script src="../d3/d3.min.js" charset="utf-8"></script>
 	<script src="websocket.js"></script>
 	<script src="streaming_graph.js"></script>
 	<link rel="stylesheet" href="demo.css" />
