Add link for cubism image.

--- a/2013-05-09.RealtimeTimeseriesVisualisation/index.html
+++ b/2013-05-09.RealtimeTimeseriesVisualisation/index.html
@@ -541,7 +541,7 @@ socket.on('message', function(data) {
 		<li>Auto-fit chart on browser resize: <a target="_blank" href="http://bost.ocks.org/mike/chart">bost.ocks.org/mike/chart</a></li>
 		<li>Cubism: <a target="_blank" href="http://square.github.io/cubism">square.github.io/cubism</a></li>
 	</ul>
-	<img src="cubism.png" width="982" height="320"/>
+	<a class="image" href="http://square.github.io/cubism"><img src="cubism.png" width="982" height="320"/></a>
 </section>
 
 <section>
