--- a/index.html
+++ b/index.html
@@ -4,40 +4,30 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>D3.js London User Group by herebebeasties</title>
+
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
   <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/herebebeasties/D3.js-London-User-Group">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/herebebeasties/D3.js-London-User-Group/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/herebebeasties/D3.js-London-User-Group/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
-
     <div class="wrapper">
+      <header>
+        <h1>D3.js London User Group</h1>
+        <p>Talks &amp; code for the London D3.js user group</p>
 
+        <p class="view"><a href="https://github.com/herebebeasties/D3.js-London-User-Group">View the Project on GitHub <small>herebebeasties/D3.js-London-User-Group</small></a></p>
+
+
+        <ul>
+          <li><a href="https://github.com/herebebeasties/D3.js-London-User-Group/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/herebebeasties/D3.js-London-User-Group/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/herebebeasties/D3.js-London-User-Group">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
       <section>
-        <div id="title">
-          <h1>D3.js London User Group</h1>
-          <p>Talks &amp; code for the London D3.js user group</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/herebebeasties">herebebeasties</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
-        </div>
-
         <h1>What's here so far?</h1>
 
 <ol>
@@ -52,9 +42,22 @@ a webserver on port 8000 by default (change this with --port=nnnn)</p>
 <p>Then navigate to <a href="http://localhost:8000">localhost:8000</a> in your <a href="http://caniuse.com/websockets">WebSocket-capable</a>
 web browser of choice.</p>
       </section>
-
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/herebebeasties">herebebeasties</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
+    <script src="javascripts/scale.fix.js"></script>
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-1123969-4");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
   </body>
 </html>
